<resources>
    <string name="app_name">TOMO Wallet</string>
    <string name="blank">This is blank!</string>
    <string name="next">Next</string>
    <string name="construct_1">TOMO wallet will create your unique Mnemonic pharse containing 12 unique words. This pharse is use to recover your wallet, so please keep it safely.</string>
    <string name="your_mnemonic">Your Mnemonic</string>
    <string name="your_address">Your wallet address</string>
    <string name="your_private_key">Your private key</string>
    <string name="done">done</string>
    <string name="creating_your_wallet">Creating your wallet...</string>
    <string name="error">Error</string>
    <string name="close">Close</string>
    <string name="dacoloixayra">There was an Error!</string>
    <string name="create_wallet">Cretate new wallet</string>
    <string name="your_wallet">Your wallet</string>
    <string name="mine_tmc">Mine TMC</string>
    <string name="you_have_total">You have total:</string>
    <string name="tmc">TMC</string>
    <string name="mining">mining</string>
    <string name="ok">Ok</string>
    <string name="view_your_address">Show wallet address</string>
    <string name="view_your_mnemonic">Show mnemonic</string>
    <string name="delete_your_wallet">Delete your wallet</string>
    <string name="wallet_deleted">Wallet deleted!</string>
    <string name="be_careful">Be careful!</string>
    <string name="delete_wallet_mess">You are about to permanently delete your wallet, and your wallet can not be restored. Do you want to continue?</string>
    <string name="delete">Delete</string>
    <string name="tmc_in_tomo_chain">TMC in Tomochain</string>
    <string name="more_info">more info</string>
    <string name="cash_out">cash out</string>
    <string name="cash_in">cash in</string>
    <string name="tmc_in_eth_chain">TMC in Ethereum</string>
    <string name="cash_out_amount">Enter your amount you want to cash out to ETH. The coin must between [0] and [1].</string>
    <string name="cash_out_value">cash out value...</string>
    <string name="cash_in_amount">Enter your amount you want to cash in to TOMOChain. The coin must between [0] and [1].</string>
    <string name="cash_in_value">cash in value...</string>
    <string name="invalid_value">Invalid value!</string>
    <string name="total">Total</string>
    <string name="reward_engine_smart_contract">Reward Engine Smart Contract:</string>
    <string name="instruct_1">Do not send ethers nor tokens to any of the addresses above. They are for test only and we are not likely to have control of them in mainnet.</string>
    <string name="tomo_coin_smart_contract">Tomocoin Smart Contract:</string>
    <string name="cash_out_smart_contract">CashOut Smart Contract:</string>
    <string name="cash_in_smart_contract">CashIn Smart Contract:</string>
    <string name="send_tmc">Send TMC</string>
    <string name="receive_tmc">Receive TMC</string>
    <string name="your_address_click_to_copy">Your address (click to copy)</string>
    <string name="recevie_address">Receiver address</string>
    <string name="amount_to_transfer">Amount of TMC to transfer</string>
    <string name="transfer">Transfer</string>
    <string name="app_can_run_without_cam_permission">Application need camera permission to continue!</string>
    <string name="amount_between">The transfer amount must greater than zero and must not exceed [1] TMC!</string>
    <string name="hint_abc">eg: 3.15</string>
    <string name="invalid_address">Invalid address!</string>
    <string name="confirm_send">Confirm send TMC</string>
    <string name="confirm_send_content">Please confirm that you are about to transfer [1] TMC to address [2]. This action can not be undo!</string>
    <string name="cancel">Cancel</string>
    <string name="transferring">transferring</string>
</resources>
