<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:id="@+id/toolbar"
        android:background="@color/color_blue"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="@drawable/ripple_effect"
            android:src="@drawable/ic_keyboard_arrow_left"
            android:id="@+id/btn_back"
            android:padding="8dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/create_wallet"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:textColor="@color/color_1"
            android:paddingStart="16sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/btn_next_container"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/loading_view"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/color_1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/creating_your_wallet"
            android:textSize="18sp"
            android:layout_marginBottom="16dp" />
        <ProgressBar
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:indeterminate="true"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/btn_next_container"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/scroll_view"
        android:visibility="gone"
        android:background="@color/color_1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_mnemonic"
                android:textColor="@color/color_3"
                android:textSize="14sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                android:textSize="18sp"
                android:layout_marginBottom="16dp"
                android:id="@+id/txt_mnemonic"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_address"
                android:textColor="@color/color_3"
                android:textSize="14sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                android:textSize="18sp"
                android:layout_marginBottom="16dp"
                android:id="@+id/txt_address"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_private_key"
                android:textColor="@color/color_3"
                android:textSize="14sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                android:textSize="18sp"
                android:layout_marginBottom="16dp"
                android:id="@+id/txt_private_key"/>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/color_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/btn_next_container">
        <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@drawable/ripple_effect"
            android:text="@string/done"
            android:gravity="center"
            android:textColor="@color/color_1"
            android:id="@+id/btn_next"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>