<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_header"
        android:background="@color/color_blue"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:text="@string/your_wallet"
            android:id="@+id/txt_label"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textSize="16sp"
            android:textColor="@color/color_1"
            android:textStyle="bold"/>
        <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/ic_action_overflow"
            android:padding="12dp"
            android:background="@drawable/ripple_effect"
            android:id="@+id/btn_menu"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            app:layout_constraintEnd_toStartOf="@id/btn_menu"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:orientation="horizontal"
            android:id="@+id/btn_mine"
            android:gravity="center_vertical"
            android:background="@drawable/ripple_effect">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:layout_marginEnd="8dp"
                android:text="@string/mine_tmc"
                android:textColor="@color/color_1"
                android:gravity="center_vertical"
                android:textAllCaps="true"
                android:id="@+id/txt_mine_label"/>
            <ProgressBar
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:indeterminate="true"
                android:id="@+id/progress_mining"
                android:indeterminateTint="@color/color_1"
                android:visibility="gone"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/you_have_total"
            android:textColor="@color/color_1"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@id/txt_label"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:id="@+id/label_2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="0.0"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@color/color_1"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@id/label_2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:id="@+id/txt_num_of_total_tmc"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/tmc"
            android:textColor="@color/color_1"
            android:gravity="center_vertical"
            app:layout_constraintStart_toEndOf="@id/txt_num_of_total_tmc"
            app:layout_constraintBaseline_toBaselineOf="@id/txt_num_of_total_tmc"
            android:layout_marginStart="20dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            app:layout_constraintTop_toBottomOf="@id/txt_num_of_total_tmc"
            android:text="@string/blank"
            android:background="@drawable/ripple_effect"
            android:textColor="@color/color_1"
            android:textSize="14sp"
            android:id="@+id/txt_wallet_address"
            android:maxLines="1"
            android:ellipsize="end"/>
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>