<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:id="@+id/container_side_chain">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:text="0.0"
                android:textStyle="bold"
                android:textColor="@color/color_blue"
                android:id="@+id/txt_side_chain_coin"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tmc_in_tomo_chain"
                android:textSize="16sp"
                android:textColor="@color/color_blue"
                app:layout_constraintBaseline_toBaselineOf="@id/btn_side_chain_info"
                app:layout_constraintEnd_toStartOf="@id/btn_side_chain_info"
                app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/more_info"
                android:gravity="center"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textAllCaps="true"
                android:background="@drawable/ripple_effect"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/btn_side_chain_info"
                app:layout_constraintTop_toBottomOf="@id/txt_side_chain_coin"/>
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/container_mid"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintBottom_toTopOf="@id/container_main_chain"
        app:layout_constraintTop_toBottomOf="@id/container_side_chain">

        <LinearLayout
            android:id="@+id/container_cash_out"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:layout_marginStart="30dp"

            android:background="@color/color_blue"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/btn_cash_out"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ripple_effect"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/cash_out"
                    android:textAllCaps="true"
                    android:textColor="@color/color_1" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:srcCompat="@drawable/arrow_down_white" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_cash_in"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:layout_marginEnd="30dp"
            android:background="@color/color_50"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/btn_cash_in"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ripple_effect"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/cash_in"
                    android:textAllCaps="true"
                    android:textColor="@color/color_1" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:srcCompat="@drawable/arrow_up_white" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/img_cash_out"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/arrow_down_black" />

        <ImageView
            android:id="@+id/img_cash_in"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/arrow_up_black" />
    </android.support.constraint.ConstraintLayout>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/container_mid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:id="@+id/container_main_chain">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:text="0.0"
                android:textStyle="bold"
                android:textColor="@color/color_50"
                android:id="@+id/txt_main_chain_coin"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tmc_in_eth_chain"
                android:textSize="16sp"
                android:textColor="@color/color_50"
                app:layout_constraintBaseline_toBaselineOf="@id/btn_main_chain_info"
                app:layout_constraintEnd_toStartOf="@id/btn_main_chain_info"
                app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/more_info"
                android:gravity="center"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textAllCaps="true"
                android:background="@drawable/ripple_effect"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/btn_main_chain_info"
                app:layout_constraintTop_toBottomOf="@id/txt_main_chain_coin"/>
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>